--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="capuccino.html">Receita de Cappuccino</a></li>
+            <li><a href="receitas/capuccino.html">Receita de Cappuccino</a></li>
             <li><a href="cardapio.html">Cardápio</a></li>
         </ul>
     </nav>
