--- a/public/receitas/capuccino.html
+++ b/public/receitas/capuccino.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renan's Coffee - Receita de Cappuccino</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="capuccino.html">Receita de Cappuccino</a></li>
+            <li><a href="receitas/capuccino.html">Receita de Cappuccino</a></li>
             <li><a href="cardapio.html">Cardápio</a></li>
         </ul>
     </nav>
