--- a/public/receitas/capuccino.html
+++ b/public/receitas/capuccino.html
@@ -13,10 +13,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="receitas/capuccino.html">Receita de Cappuccino</a></li>
-            <li><a href="cardapio.html">Cardápio</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../sobre.html">Sobre</a></li>
+            <li><a href="../receitas/capuccino.html">Receita de Cappuccino</a></li>
+            <li><a href="../cardapio.html">Cardápio</a></li>
         </ul>
     </nav>
 
