Atualizando rodape e imagem

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <section id="media-showcase">
             <h2>Nosso Mundo do Café em Imagens e Sons</h2>
             <div class="media-container">
-                <img src="https://via.placeholder.com/600x400?text=Cafeteria+Aconchegante" alt="Ambiente aconchegante da cafeteria Renan's Coffee">
+                <img src="https://cdn.pixabay.com/photo/2020/07/08/18/26/barista-5384800_640.jpg?text=Cafeteria+Aconchegante" alt="Ambiente aconchegante da cafeteria Renan's Coffee">
                 <p>Veja um pouco do nosso ambiente e da magia por trás de cada café.</p>
                 <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Um vídeo de café (exemplo)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p>Ouça o som relaxante do preparo do café.</p>
