--- a/public/sobre.html
+++ b/public/sobre.html
@@ -24,7 +24,7 @@
         <section id="about-us">
             <h2>Nossa História e Paixão</h2>
             <div class="about-content">
-                <img src="https://via.placeholder.com/400x300?text=Nossa+Historia" alt="Foto da equipe Renan's Coffee ou plantação de café">
+                <img src="https://cdn.pixabay.com/photo/2017/07/31/19/27/coffee-2560260_400.jpg?text=Nossa+Historia" alt="Foto da preparação de café">
                 <div class="about-text">
                     <h3>A Origem do Sabor</h3>
                     <p>O Renan's Coffee nasceu da paixão de Renan por cafés especiais. Começamos como uma pequena torrefação artesanal, buscando os melhores grãos das fazendas mais renomadas. Nossa missão sempre foi clara: levar a cada cliente uma experiência única, desde o aroma envolvente até o último gole de uma bebida perfeitamente preparada.</p>
